--- a/BR_LIS_Ver1/src/main/webapp/WEB-INF/web.xml
+++ b/BR_LIS_Ver1/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,7 @@
 		<param-value>
 		/WEB-INF/spring/appServlet/root-context.xml
 		/WEB-INF/spring/appServlet/security-context.xml
+		/WEB-INF/spring/appServlet/email-context.xml
 		</param-value>
 	</context-param>
 	
