--- a/BR_LIS_Ver1/pom.xml
+++ b/BR_LIS_Ver1/pom.xml
@@ -318,6 +318,18 @@
 				    <artifactId>gson</artifactId>
 				    <version>2.8.5</version>
 				</dependency>
+				
+							<!-- Elastic Search -->
+				<dependency>
+					<groupId>org.elasticsearch</groupId>
+					<artifactId>elasticsearch</artifactId>
+					<version>7.12.1</version>
+				</dependency>
+				<dependency>
+					<groupId>org.elasticsearch.client</groupId>
+					<artifactId>elasticsearch-rest-high-level-client</artifactId>
+					<version>7.12.1</version>
+				</dependency>
 		
 	</dependencies>
 	
